# simple_notification

./: .dockerignore  Dockerfile  alembic.ini  docker-compose.yaml  loadtest.sh  pyproject.toml  ws_connection.py
migrations/: env.py
migrations/versions/: 3261387bf67c_init.py  8a328b5576d0_add_notification_trigger_and_function.py  9f9be199ae5c_init.py
simple_notification/: auth.py  db.py  main.py  models.py  notification_consumer_aiopg.py  notification_consumer_redis.py  publish_notifications.py  redis_.py  ws_notification_consumer.py
simple_notification/models/: __init__.py  notification.py  user.py
simple_notification/routers/: auth.py  notification.py  user.py
