[tool.poetry]
name = "simple-notification"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.103.0"
uvicorn = "^0.23.2"
sqlmodel = "^0.0.8"
asyncpg = "^0.28.0"
alembic = "^1.11.3"
aio-pika = "^9.2.2"
websockets = "^11.0.3"
redis = "^5.0.0"
aiopg = "^1.4.0"
greenlet = "^2.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
